[package]
name = "mpquic_apps"
version = "0.1.0"
edition = "2021"
publish = false
build = "src/build.rs"

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiche/sfv"]

default = ["qlog", "sfv"]

[build-dependencies]
capnpc = "0.15"

[dependencies]
clap = { version="3.2", features = ["derive"]}
log4rs = "1"
log = "0.4"
mio = { version = "0.8", features = ["net", "os-poll"] }
quiche = { path = "../quiche/quiche" }
ring = "0.16"
url = "1"
itertools = "0.10"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
capnp = "0.15"
capnp-rpc = "0.15"
futures = "0.3"
tokio = {version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = {version = "0.7.4", features = ["compat"]}

[[bin]]
name = "mp_server"
path = "src/bin/server.rs"


[[bin]]
name = "mp_client"
path = "src/bin/client.rs"